--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 </title>
 </head>
 <body>
-<p>this is shirisha</p>
-<p>this is eshwari</p>
+<p>Hello, this is my first Ansible webserver program</p>
 </body>
 </html>
